--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <title>Frontend Mentor | NFT preview card component</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Challenge Frontend Mentor NFT preview card component"
+    />
+    <meta name="theme-color" content="#14253d" />
 
     <link
       rel="icon"
